style.css
body, h1, p, span{
    margin: 0;
}

html {
    width: 1920px;
    overflow: hidden;
    margin: 0;
}

@font-face {
    font-family: 'Proxima Nova';
    src: url('fonts/ProximaNovaThin/ProximaNovaT-Thin.eot');
    src: url('fonts/ProximaNovaThin/ProximaNovaT-Thin.ttf') format('truetype');
}

.header {
    width: 1920px;
    height: 1080px;
    left: 0px;
    background: url(images/header_background.png);
    overflow: hidden;
}

.smoke {
    position: absolute;
    width: 1920px;
    height: 1080px;
    left: 0px;
    background: url(images/smoke1.png);
}

.header h1 {
    position: absolute;
    width: 536px;
    height: 122px;
    left: 1170px;
    top: 111px;
    font-family: Proxima Nova;
    font-style: normal;
    font-weight: 250;
    font-size: 100px;
    line-height: 122px;
    color: #FFFFFF;
}

.header p {
    position: absolute;
    width: 145px;
    height: 30px;
    left: 1365px;
    top: 221px;
    font-family: Proxima Nova;
    font-style: normal;
    font-weight: 250;
    font-size: 25px;
    line-height: 30px;  
    color: #FFFFFF;

}

.header span {
    position: absolute;
    width: 204px;
    height: 0px;
    left: 1336px;
    top: 258px;
    border: 1px solid #FF5A5A;
}

.main_left_side {
    width: 960px;
    height: 1080px;
    left: 0px;
    top: 1080px;
    background: url(images/be_a_member_black.png);
    float: left;
}

.main_right_side {
    width: 960px;
    height: 1080px;
    left: 0px;
    top: 1080px;
    background: url(images/need_a_website_black.png);
    float: right;
}

